[gd_scene load_steps=11 format=3 uid="uid://cd3vaw6j84eri"]

[ext_resource type="Texture2D" uid="uid://c0je5f18pdj21" path="res://UPGRADE/ASSETS/MenuPanel.png" id="1_df1bx"]
[ext_resource type="Script" uid="uid://cqi5qbu8hoh3u" path="res://UPGRADE/SCRIPTS/menu_panel.gd" id="1_swu7v"]
[ext_resource type="FontFile" uid="uid://ds0wljn1e2by1" path="res://MENU/THEMES/Pulang.otf" id="3_dgrv2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_swu7v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_swu7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgrv2"]
size = Vector2(506, 588)

[sub_resource type="LabelSettings" id="LabelSettings_tqd0a"]
font = ExtResource("3_dgrv2")
font_size = 48
font_color = Color(0.152941, 0.152941, 0.152941, 1)
outline_size = 13
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.513726)
shadow_offset = Vector2(5.505, 7.05)

[sub_resource type="LabelSettings" id="LabelSettings_j2qxc"]
font = ExtResource("3_dgrv2")
font_size = 24
outline_size = 2
outline_color = Color(0.0726156, 0.121609, 0.0100355, 0.811765)

[sub_resource type="LabelSettings" id="LabelSettings_ovm0l"]
font = ExtResource("3_dgrv2")
font_size = 32
outline_size = 2
outline_color = Color(0, 0, 0, 0.760784)

[sub_resource type="LabelSettings" id="LabelSettings_dd1s5"]
font = ExtResource("3_dgrv2")
font_size = 32
outline_size = 2
outline_color = Color(0, 0, 0, 0.701961)

[node name="Menu" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_swu7v")
script = ExtResource("1_swu7v")

[node name="Pin" type="StaticBody2D" parent="."]
position = Vector2(-2, -249)

[node name="PinJoint2D" type="PinJoint2D" parent="Pin"]
node_a = NodePath("..")
node_b = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pin"]
shape = SubResource("CircleShape2D_swu7v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -248)
texture = ExtResource("1_df1bx")
offset = Vector2(2, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, -3)
shape = SubResource("RectangleShape2D_dgrv2")

[node name="LeftButton" type="Button" parent="."]
offset_left = -252.0
offset_top = -301.0
offset_right = -2.0
offset_bottom = 293.0
focus_mode = 0
flat = true

[node name="RightButton" type="Button" parent="."]
offset_left = 2.0
offset_top = -301.0
offset_right = 252.0
offset_bottom = 293.0
focus_mode = 0
flat = true

[node name="TitleLabel" type="Label" parent="."]
offset_left = -225.0
offset_top = -202.0
offset_right = 235.0
offset_bottom = -84.0
text = "TITLE MENU"
label_settings = SubResource("LabelSettings_tqd0a")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="."]
offset_left = -169.0
offset_top = -33.0
offset_right = 182.0
offset_bottom = 76.0
text = "This is the menu description, it could be quite long."
label_settings = SubResource("LabelSettings_j2qxc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="EffectContainer" type="VBoxContainer" parent="."]
offset_left = -169.0
offset_top = 134.0
offset_right = 180.0
offset_bottom = 236.0
alignment = 1

[node name="EffectLabel1" type="Label" parent="EffectContainer"]
layout_mode = 2
text = "Niveau x / x"
label_settings = SubResource("LabelSettings_ovm0l")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="EffectLabel2" type="Label" parent="EffectContainer"]
layout_mode = 2
text = "This menu does that"
label_settings = SubResource("LabelSettings_dd1s5")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="mouse_entered" from="LeftButton" to="." method="_on_left_button_mouse_entered"]
[connection signal="mouse_entered" from="RightButton" to="." method="_on_right_button_mouse_entered"]
